JumpScript/tests/baselines/reference/enumMemberResolution.errors.txt
tests/cases/compiler/enumMemberResolution.jump(4,9): error TS2304: Cannot find name 'IgnoreRulesSpecific'.
tests/cases/compiler/enumMemberResolution.jump(4,29): error TS1003: Identifier expected.


==== tests/cases/compiler/enumMemberResolution.jump (2 errors) ====
    enum Position2 {
        IgnoreRulesSpecific = 0
    }
    var x = IgnoreRulesSpecific. // error
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IgnoreRulesSpecific'.
                                
!!! error TS1003: Identifier expected.
    var y = 1;
    var z = Position2.IgnoreRulesSpecific; // no error
    